##Text encoding: utf-8

2010-12-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: save all children.
	* libs/gcp/electron.cc: serialize the Id.
	* libs/gcp/fragment-atom.cc: serialize an orbital child if any.
	* libs/gcp/fragment.cc: ditto.
	* libs/gcp/reaction-step.cc: make GetYAlign() safer. 
	* plugins/paint/atoms/orbitaltool.cc: fixed one more undo/redo issue.

2010-12-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment.cc: fragments accept local charges again.
	* libs/gcp/mechanism-step.cc: better fix.
	* plugins/paint/arrows/curvedarrowtool.cc: fixed undo/redo.

2010-12-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: ensure that the displayed options page always
	correpond to the active tool.
	* libs/gcp/mechanism-step.cc: when destroying, reparent children when we
	are inside a reaction.
	* libs/gcp/reaction-step.cc: new ReactionStep:AddMolecule() method.
	* libs/gcp/reaction-step.h: ditto.

2010-12-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/mechanism-step.cc: destroy a mechanismstep when the last arrow
	is removed.

2010-12-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/arrows/curvedarrowtool.cc: removed a printf debug statement.
	* plugins/paint/selection/lassotool.cc: allow rotation around an atom, and
	call EmitSignal for all modified objects.

2010-12-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: use AC_CONFIG_HEADERS instead of AM_CONFIG_HEADER.
	* libs/gcp/atom.cc: fixed electrons lone pairs count for atoms with
	an extended octet.
	* libs/gcp/tool.cc: don't set Tool::m_Pressed when OnClicked return false.
	* plugins/paint/residues/residues-dlg.cc: don't use deprecated
	GtkNotebookPage.
	* programs/calc/gchemcalc.cc: ditto.

2010-12-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/tool.cc: avoid crashes when activating a tool.

2010-12-07  Jean Bréfort  <jean.brefort@normalesup.org>