@@ -56,6 +56,7 @@ MechanismArrow::MechanismArrow ():
 	m_Pair (true),
 	m_EndAtNewBondCenter (false)
 {
+	SetId ("ma1");
 }
 
 MechanismArrow::~MechanismArrow ()
@@ -186,6 +187,8 @@ xmlNodePtr MechanismArrow::Save (xmlDocPtr xml) const
 bool MechanismArrow::Load (xmlNodePtr node)
 {
 	gcu::Document *doc = GetDocument ();
+	if (!Object::Load (node))
+	    return false;
 	xmlChar *buf = xmlGetProp (node, reinterpret_cast <xmlChar const *> ("source"));
 	doc->SetTarget (reinterpret_cast <char *> (buf), &m_Source, GetParent (), this);
 	if (m_Source)
